fix accordeon mobile for service pages

--- a/wp-content/themes/cleverclip/styles/pages/service/questions.scss
+++ b/wp-content/themes/cleverclip/styles/pages/service/questions.scss
@@ -14,6 +14,7 @@
 
   @include media("<small") {
     margin-bottom: 3.5rem;
+    margin-bottom: 1rem;
   }
 }
 
@@ -64,6 +65,7 @@
   }
 
   @include media("<small") {
+    padding-top: 3rem;
     &:not(:first-child) {
       margin-top: 2rem;
     }
@@ -77,6 +79,10 @@
 
   color: $color-birch;
   cursor: pointer;
+
+  @include media("<small") {
+    padding-right: 2rem;
+  }
 }
 
 .service__questions__article__content {
@@ -169,4 +175,11 @@
   @include plusMinus(35px, 4px, $color-deep-koamaru);
   margin-left: auto;
   pointer-events: none;
+
+  @include media("<small") {
+    @include plusMinus(25px, 4px, $color-deep-koamaru);
+    position: absolute;
+    right: 0px;
+    top: 3rem;
+  }
 }
